fix: id number validation
this commit includes some minor fixes
- possible null pointer in customer-person validation
- use `String.isBlank` to validate empty strings

renamed, simplified and fixed unit tests for
`SalesDataTransportJpaServiceImplTest`